# discord-event-bot

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  README.rst  config.yaml  quotes.txt  secrets.yaml.default  setup.cfg  setup.py
src/discord_bot_mapalarm/: __init__.py  bot.py
src/discord_bot_mapalarm/cogs/: eventroles.py  kacky_notifier_cog.py  mapalarm.py  send_to_channel.py  wralarm.py
src/discord_bot_mapalarm/db_ops/: alarm_checker.py  db_base.py  role_checker.py  wr_notification_check.py
src/discord_bot_mapalarm/tm_string/: tm_format_resolver.py
