[metadata]
name = discord-bot-mapalarm
description = Discord Bot for notifications when a map in a Kacky Competition comes up.
author = Daniel Bremer
author_email = corkscrew@dingens.me
license = MIT
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/kacky-code/discord-bot-mapalarm
project_urls =
    Documentation = https://github.com/kacky-code/discord-bot-mapalarm
    Discord = http://discord.gg/skgr5FU
    Twitter = https://mobile.twitter.com/kackiestkacky

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

classifiers =
    Development Status : 5 - Production/Stable
    Programming Language :: Python
    Environment :: Bot Scripting
    Framework :: Discord

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    discord
    importlib-metadata; python_version<"3.8"
    requests
    PyYaml

[options.packages.find]
where = src

[options.extras_require]
dev =
    pre-commit

[options.entry_points]
console_scripts =
    start_kacky_discord_alarm = discord_bot_mapalarm.bot:main

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.3
package = discord_bot_mapalarm
extensions =
    pre_commit
